--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server",
-    "build": "node_modules/.bin/webpack -p"
+    "dist": "WEBPACK_ENV=online node_modules/.bin/webpack -p",
+    "dist_win": "set WEBPACK_ENV=online&& node_modules/.bin/webpack -p"
   },
   "dependencies": {
     "prop-types": "15.6.0",
